# roop.cpp

./: README.md
src/: CMakeLists.txt  roop.cpp
src/engine/: engine.h  engine_openvino.cpp  engine_openvino.h
